update adaptive news page

--- a/pages/newsPages/newsSinglePage.html
+++ b/pages/newsPages/newsSinglePage.html
@@ -195,25 +195,37 @@
                 <h1 class="additional-nav__title">Читайте также</h1>
                 <ul class="news__list-additional">
                     <li class="news__list-additional__item">
-                        <img src="/images/model/new-products3.svg" alt="" class="news__list-additional__item-img">
-                        <div class="news__list-additional__item-info">
-                            <p class="news__list-additional__item-info__date">18.09.2023</p>
-                            <p class="news__list-additional__item-info__title">Новый полноразмерный внедорожник TANK 500 </p>
-                        </div>
+                        <a href="/pages/newsPages/newsSinglePage.html">
+                            <div class="news__card">
+                                <img src="/images/model/new-products1.svg" alt="" class="news__card-img">
+                                <div class="news__card-info">
+                                    <h1 class="news__card-info__date">18.09.2023</h1>
+                                    <h1 class="news__card-info__title">Новый полноразмерный внедорожник TANK 500</h1>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                     <li class="news__list-additional__item">
-                        <img src="/images/model/new-products3.svg" alt="" class="news__list-additional__item-img">
-                        <div class="news__list-additional__item-info">
-                            <p class="news__list-additional__item-info__date">18.09.2023</p>
-                            <p class="news__list-additional__item-info__title">Новый полноразмерный внедорожник TANK 500 </p>
-                        </div>
+                        <a href="/pages/newsPages/newsSinglePage.html">
+                            <div class="news__card">
+                                <img src="/images/model/new-products1.svg" alt="" class="news__card-img">
+                                <div class="news__card-info">
+                                    <h1 class="news__card-info__date">18.09.2023</h1>
+                                    <h1 class="news__card-info__title">Новый полноразмерный внедорожник TANK 500</h1>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                     <li class="news__list-additional__item">
-                        <img src="/images/model/new-products3.svg" alt="" class="news__list-additional__item-img">
-                        <div class="news__list-additional__item-info">
-                            <p class="news__list-additional__item-info__date">18.09.2023</p>
-                            <p class="news__list-additional__item-info__title">Новый полноразмерный внедорожник TANK 500 </p>
-                        </div>
+                        <a href="/pages/newsPages/newsSinglePage.html">
+                            <div class="news__card">
+                                <img src="/images/model/new-products1.svg" alt="" class="news__card-img">
+                                <div class="news__card-info">
+                                    <h1 class="news__card-info__date">18.09.2023</h1>
+                                    <h1 class="news__card-info__title">Новый полноразмерный внедорожник TANK 500</h1>
+                                </div>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div> 
